Manejo de configuraciones

--- a/views/play.ejs
+++ b/views/play.ejs
@@ -122,6 +122,7 @@
       </main>
       <aside>
          <!-- Lifelines -->
+         <!--
          <div class="lifelines">
             <button class="lifeline" title="Audience Poll" id="audience-poll">
                <img src="/img/audience_poll.png" alt="" />
@@ -156,9 +157,128 @@
                </div>
             </button>
          </div>
+         -->
 
          <!-- Side price table -->
          <table class="price-table">
+
+            <tr class="price-table-row">
+               <td class="price-table-no locked">20</td>
+               <td class="reached" id="slot-marker-20">
+                  <img src="/img/green.png" alt="" />
+               </td>
+               <td class="price-table-data locked"> Nivel 20 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no locked">19</td>
+               <td class="reached" id="slot-marker-19">
+                  <img src="/img/green.png" alt="" />
+               </td>
+               <td class="price-table-data"> Nivel 19 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no">18</td>
+               <td class="reached" id="slot-marker-18">
+                  <img src="/img/green.png" alt="" />
+               </td>
+               <td class="price-table-data"> Nivel 18 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no">17</td>
+               <td class="reached" id="slot-marker-17">
+                  <img src="/img/green.png" alt="" />
+               </td>
+               <td class="price-table-data"> Nivel 17 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no">16</td>
+               <td class="reached" id="slot-marker-16">
+                  <img src="/img/green.png" alt="" />
+               </td>
+               <td class="price-table-data"> Nivel 16 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no checkpoint">15</td>
+               <td class="reached" id="slot-marker-15">
+                  <img src="/img/green.png" alt="" />
+               </td>
+               <td class="price-table-data checkpoint"> Nivel 15 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no">14</td>
+               <td class="reached" id="slot-marker-14"> <img src="/img/green.png" alt="" /></td>
+               <td class="price-table-data"> Nivel 14 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no">13</td>
+               <td class="reached" id="slot-marker-13"> <img src="/img/green.png" alt="" /></td>
+               <td class="price-table-data"> Nivel 13 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no">12</td>
+               <td class="reached" id="slot-marker-12"> <img src="/img/green.png" alt="" /></td>
+               <td class="price-table-data"> Nivel 12 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no">11</td>
+               <td class="reached" id="slot-marker-11"> <img src="/img/green.png" alt="" /></td>
+               <td class="price-table-data"> Nivel 11 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no checkpoint">10</td>
+               <td class="reached" id="slot-marker-10"> <img src="/img/green.png" alt="" /></td>
+               <td class="price-table-data checkpoint"> Nivel 10 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no">9</td>
+               <td class="reached" id="slot-marker-9"> <img src="/img/green.png" alt="" /></td>
+               <td class="price-table-data"> Nivel 9 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no">8</td>
+               <td class="reached" id="slot-marker-8"> <img src="/img/green.png" alt="" /></td>
+               <td class="price-table-data"> Nivel 8 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no">7</td>
+               <td class="reached" id="slot-marker-7"> <img src="/img/green.png" alt="" /></td>
+               <td class="price-table-data"> Nivel 7 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no">6</td>
+               <td class="reached" id="slot-marker-6"> <img src="/img/green.png" alt="" /></td>
+               <td class="price-table-data"> Nivel 6 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no checkpoint">5</td>
+               <td class="reached" id="slot-marker-5"> <img src="/img/green.png" alt="" /></td>
+               <td class="price-table-data checkpoint"> Nivel 5 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no">4</td>
+               <td class="reached" id="slot-marker-4"> <img src="/img/green.png" alt="" /></td>
+               <td class="price-table-data"> Nivel 4 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no">3</td>
+               <td class="reached" id="slot-marker-3"> <img src="/img/green.png" alt="" /></td>
+               <td class="price-table-data"> Nivel 3 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no">2</td>
+               <td class="reached" id="slot-marker-2"> <img src="/img/green.png" alt="" /></td>
+               <td class="price-table-data"> Nivel 2 </td>
+            </tr>
+            <tr class="price-table-row">
+               <td class="price-table-no">1</td>
+               <td class="reached" id="slot-marker-1"> <img src="/img/green.png" alt="" /></td>
+               <td class="price-table-data"> Nivel 1 </td>
+            </tr>
+
+
+
+
+            <!--
             <tr class="price-table-row">
                <td class="price-table-no locked">16</td>
                <td class="reached" id="slot-marker-16">
@@ -273,6 +393,7 @@
                </td>
                <td class="price-table-data">1,000</td>
             </tr>
+            -->
          </table>
       </aside>
 
