Manejo de configuraciones

--- a/views/play.ejs
+++ b/views/play.ejs
@@ -122,8 +122,8 @@
       </main>
       <aside>
          <!-- Lifelines -->
-         <!--
-         <div class="lifelines">
+         
+         <div class="lifelines" style="display: none;">
             <button class="lifeline" title="Audience Poll" id="audience-poll">
                <img src="/img/audience_poll.png" alt="" />
                <div class="used unused" id="audience-poll-div">
@@ -157,7 +157,7 @@
                </div>
             </button>
          </div>
-         -->
+         
 
          <!-- Side price table -->
          <table class="price-table">
