--- a/views/play.ejs
+++ b/views/play.ejs
@@ -79,8 +79,8 @@
                 </label>
             </div>
             <div class="buttons">
-                <button id="lock-button">Lock</button>
-                <button id="quit-button">Quit</button>
+                <button id="lock-button">Confirmar respuesta</button>
+                <button id="quit-button">Salir</button>
             </div>
          </div>
 
@@ -398,5 +398,7 @@
       </aside>
 
       <script src="/js/play.js" type="text/javascript"></script>
+
+      
    </body>
 </html>
