--- a/public/styles/play.css
+++ b/public/styles/play.css
@@ -8,6 +8,10 @@
 }
 
 body {
+    font-family: 'Poppins', sans-serif;
+    height: 100vh;
+}
+#app {
     display: flex;
     font-family: 'Poppins', sans-serif;
     height: 100vh;
@@ -23,6 +27,17 @@ main {
     padding: 2%;
     background-color: rgb(236, 236, 236);
     position: relative;
+}
+
+aside {
+    border-left: 3px solid #f0d245;
+    background-color: #390f4e;
+    width: 30%;
+}
+
+aside .head{
+    padding: 10px;
+    color: #fff;
 }
 
 .message {
@@ -160,6 +175,17 @@ main {
     border-radius: 0px 15px 0px 15px;
 }
 
+.answer.ok {
+    background: linear-gradient(90deg, rgba(47,132,4,1) 0%, rgba(87,212,8,1) 50%, rgba(47,132,4,1) 100%);
+}
+.answer.fail {
+    background: linear-gradient(90deg, rgba(240,176,0,1) 0%, rgba(224,209,70,1) 50%, rgba(240,176,0,1) 100%);
+}
+
+#answer-container .answer.ok input:checked ~ .checked {
+    background: unset;
+}
+
 /* Hide the browser's default radio button */
 
 #answer-container label input {
@@ -191,7 +217,7 @@ main {
 #answer-container input:checked ~ .checked {
     background-size: 100%;
     border: 1px solid;
-    background-color: #f0d245;
+    background: #f0d245;
     opacity: 0.4;
 }
 
@@ -279,7 +305,6 @@ main {
 }
 
 #end-game-dialog {
-    display: none;
     position: absolute;
     bottom: 3%;
     left: 3%;
@@ -298,11 +323,7 @@ main {
     border-radius: 0px 20px 0px 20px;
 }
 
-aside {
-    border-left: 3px solid #f0d245;
-    background-color: #390f4e;
-    width: 30%;
-}
+
 
 .lifelines {
     padding: 20px 10px;
@@ -391,7 +412,7 @@ aside {
 .reached {
     width: 1px;
     height: 1px;
-    visibility: hidden;
+    /*visibility: hidden;*/
 }
 
 .price-table-data {
