--- a/views/play.ejs
+++ b/views/play.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Play</title>
+        <title>Jugar</title>
 
         <!-- Chart.js -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="buttons">
                     <button id="lock-button" v-on:click="comprobarRespuesta()">Confirmar respuesta</button>
-                    <button id="quit-button">Salir</button>
+                    <button id="quit-button" v-on:click="mostrarDialogoSalir()">Salir</button>
                 </div>
 
              
@@ -97,15 +97,15 @@
                 </div>
 
                 <!-- Quit Dialog -->
-                <div class="dialog" id="quit-dialog">
+                <div class="dialog show" v-if="dialogoSalir">
                     <p class="dialog-message" id="quit-dialog-message">
-                        Are you sure you want to quit?<br />You will win Rs 3000
+                        Esta seguro de que desea terminar?<br/>
                     </p>
-                    <button class="dialog-close" id="quit-dialog-quit">
-                        Yes, I want to quit
+                    <button class="dialog-close" v-on:click="terminarJuego()">
+                        Si, yo quiero terminar de jugar
                     </button>
-                    <button class="dialog-close" id="quit-dialog-cancel">
-                        No, I want to keep playing
+                    <button class="dialog-close" v-on:click="ocultarDialogoSalir()">
+                        No, deseo continuar jugando
                     </button>
                 </div>
 
@@ -117,9 +117,9 @@
             <aside>
                 <div class="head">
                     <h3>{{ usuario.nombre }}</h3>
-                    <p>Tiempo total: {{ usuario.tiempo }}</p>
+                    <p>Tiempo total: {{ usuario.tiempo }} Seg.</p>
                     <p>Nivel actual: {{ usuario.nivel_actual }}</p>
-                    <!-- <p>Nivel Maximo alcanzado: {{ usuario.nivel_max }}</p> -->
+                    <p>Nivel Maximo alcanzado: {{ usuario.nivel_max }}</p>
                 </div>
 
                 <!-- Lifelines -->
@@ -155,134 +155,14 @@
                     </button>
                 </div>
 
-
-                <!-- Side price table -->
                 <table class="price-table">
-
-                    <tr class="price-table-row" v-for="nivel in nivelesPanel()">
-                       <td class="price-table-no locked" :class="{'checkpoint': nivel.seguro}">{{  nivel.id }}</td>
-                       <td class="reached">
+                    <tr class="price-table-row" :class="{'active': nivel.id == usuario.nivel_actual}" v-for="nivel in nivelesPanel()">
+                       <td class="price-table-no" :class="{'checkpoint': nivel.seguro, 'locked': !nivel.completado}">{{  nivel.id }}</td>
+                       <td class="reached" :class="{'checkpoint': nivel.seguro, 'locked': !nivel.completado}">
                           <img src="/img/green.png" alt="" v-if="nivel.completado" />
                        </td>
-                       <td class="price-table-data locked" :class="{'checkpoint': nivel.seguro}"> {{ nivel.nombre }} </td>
+                       <td class="price-table-data" :class="{'checkpoint': nivel.seguro, 'locked': !nivel.completado}"> {{ nivel.nombre }} </td>
                     </tr>
-
-                    <!--
-                    <tr class="price-table-row">
-                       <td class="price-table-no locked">16</td>
-                       <td class="reached" id="slot-marker-16">
-                          <img src="/img/green.png" alt="" />
-                       </td>
-                       <td class="price-table-data locked">
-                          7 Crore
-                       </td>
-                    </tr>
-                    <tr class="price-table-row">
-                       <td class="price-table-no">15</td>
-                       <td class="reached" id="slot-marker-15">
-                          <img src="/img/green.png" alt="" />
-                       </td>
-                       <td class="price-table-data">1 Crore</td>
-                    </tr>
-                    <tr class="price-table-row">
-                       <td class="price-table-no">14</td>
-                       <td class="reached" id="slot-marker-14">
-                          <img src="/img/green.png" alt="" />
-                       </td>
-                       <td class="price-table-data">50,00,000</td>
-                    </tr>
-                    <tr class="price-table-row">
-                       <td class="price-table-no">13</td>
-                       <td class="reached" id="slot-marker-13">
-                          <img src="/img/green.png" alt="" />
-                       </td>
-                       <td class="price-table-data">25,00,000</td>
-                    </tr>
-                    <tr class="price-table-row">
-                       <td class="price-table-no">12</td>
-                       <td class="reached" id="slot-marker-12">
-                          <img src="/img/green.png" alt="" />
-                       </td>
-                       <td class="price-table-data">12,50,000</td>
-                    </tr>
-                    <tr class="price-table-row">
-                       <td class="price-table-no">11</td>
-                       <td class="reached" id="slot-marker-11">
-                          <img src="/img/green.png" alt="" />
-                       </td>
-                       <td class="price-table-data">6,40,000</td>
-                    </tr>
-                    <tr class="price-table-row">
-                       <td class="price-table-no checkpoint">10</td>
-                       <td class="reached" id="slot-marker-10">
-                          <img src="/img/green.png" alt="" />
-                       </td>
-                       <td class="price-table-data checkpoint">3,20,000</td>
-                    </tr>
-                    <tr class="price-table-row">
-                       <td class="price-table-no">9</td>
-                       <td class="reached" id="slot-marker-9">
-                          <img src="/img/green.png" alt="" />
-                       </td>
-                       <td class="price-table-data">1,60,000</td>
-                    </tr>
-                    <tr class="price-table-row">
-                       <td class="price-table-no">8</td>
-                       <td class="reached" id="slot-marker-8">
-                          <img src="/img/green.png" alt="" />
-                       </td>
-                       <td class="price-table-data">80,000</td>
-                    </tr>
-                    <tr class="price-table-row">
-                       <td class="price-table-no">7</td>
-                       <td class="reached" id="slot-marker-7">
-                          <img src="/img/green.png" alt="" />
-                       </td>
-                       <td class="price-table-data">40,000</td>
-                    </tr>
-                    <tr class="price-table-row">
-                       <td class="price-table-no">6</td>
-                       <td class="reached" id="slot-marker-6">
-                          <img src="/img/green.png" alt="" />
-                       </td>
-                       <td class="price-table-data">20,000</td>
-                    </tr>
-                    <tr class="price-table-row">
-                       <td class="price-table-no checkpoint">5</td>
-                       <td class="reached" id="slot-marker-5">
-                          <img src="/img/green.png" alt="" />
-                       </td>
-                       <td class="price-table-data checkpoint">10,000</td>
-                    </tr>
-                    <tr class="price-table-row">
-                       <td class="price-table-no">4</td>
-                       <td class="reached" id="slot-marker-4">
-                          <img src="/img/green.png" alt="" />
-                       </td>
-                       <td class="price-table-data">5,000</td>
-                    </tr>
-                    <tr class="price-table-row">
-                       <td class="price-table-no">3</td>
-                       <td class="reached" id="slot-marker-3">
-                          <img src="/img/green.png" alt="" />
-                       </td>
-                       <td class="price-table-data">3,000</td>
-                    </tr>
-                    <tr class="price-table-row">
-                       <td class="price-table-no">2</td>
-                       <td class="reached" id="slot-marker-2">
-                          <img src="/img/green.png" alt="" />
-                       </td>
-                       <td class="price-table-data">2,000</td>
-                    </tr>
-                    <tr class="price-table-row">
-                       <td class="price-table-no">1</td>
-                       <td class="reached" id="slot-marker-1">
-                          <img src="/img/green.png" alt="" />
-                       </td>
-                       <td class="price-table-data">1,000</td>
-                    </tr>
-                    -->
                 </table>
             </aside>
         </div>
