--- a/public/styles/play.css
+++ b/public/styles/play.css
@@ -17,6 +17,12 @@ body {
     height: 100vh;
 }
 
+
+.question-img{
+    width: 100%;
+    max-width: 300px;
+}
+
 button {
     outline: none;
     cursor: pointer;
@@ -158,6 +164,12 @@ table {
     margin-bottom: 10px;
     border-radius: 0px 20px 0px 20px;
     /* border-top: 2px solid#f0d245; */
+
+
+    height: unset;
+    min-height: 100px;
+    flex-direction: column;
+    padding: 10px;
 }
 
 #answer-container {
@@ -312,7 +324,7 @@ table {
     font-size: 16px;
 }
 
-#end-game-dialog {
+/*#end-game-dialog {
     position: absolute;
     bottom: 3%;
     left: 3%;
@@ -329,6 +341,27 @@ table {
     font-family: 'Poppins', sans-serif;
     font-size: 2.5em;
     border-radius: 0px 20px 0px 20px;
+}
+*/
+
+#end-game-dialog {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    background: #673ab7;
+    color: #ffffff;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 2.5em;
+    border: none !important;
+    overflow: hidden;
+    flex-direction: column;
 }
 
 
