--- a/views/play.ejs
+++ b/views/play.ejs
@@ -114,10 +114,10 @@
             </main>
             <aside>
                 <div class="head">
-                    <h3>{{ usuario.nombre }}</h3>
+                    <h3>{{ usuario.usuario }}</h3>
                     <p>Tiempo total: {{ usuario.tiempo }} Seg.</p>
                     <p>Nivel actual: {{ usuario.nivel_actual }}</p>
-                    <p>Nivel Maximo alcanzado: {{ usuario.nivel_max }}</p>
+                    <p>Nivel Maximo alcanzado: {{ usuario.nivel_maximo }}</p>
                 </div>
 
                 <!-- Lifelines -->
@@ -164,9 +164,9 @@
                 </table>
             </aside>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
-        <script src="https://cdn.socket.io/4.5.3/socket.io.min.js" integrity="sha384-WPFUvHkB1aHA5TDSZi6xtDgkF0wXJcIIxXhC6h8OT8EH3fC5PWro5pWJ1THjcfEi" crossorigin="anonymous"></script>
+        <!--<script src="https://cdn.socket.io/4.5.3/socket.io.min.js" integrity="sha384-WPFUvHkB1aHA5TDSZi6xtDgkF0wXJcIIxXhC6h8OT8EH3fC5PWro5pWJ1THjcfEi" crossorigin="anonymous"></script>-->
         <script src="/js/play.js" type="text/javascript"></script>
     </body>
 </html>
