--- a/views/addquestion.ejs
+++ b/views/addquestion.ejs
@@ -46,6 +46,9 @@
                             <option value="3">3</option>
                             <option value="4">4</option>
                         </select>
+                        
+                        <label for="answer">Tiempo: (en segundos)</label>
+                        <input type="number" class="form-control" v-model="pregunta.time" required />
 
                     </div>
                        
@@ -91,6 +94,7 @@
                         <td v-html="pregunta.question"></td>
                         <td v-html="pregunta['option'+pregunta.answer]"></td>
                         <td> <small class="text-muted" v-html="pregunta.level"></small></td>
+                        <td> <small class="text-muted"> {{ pregunta.time || 60 }} seg</small> </td>
                         <td>
                             <button type="button" v-on:click="editarPregunta(pregunta)" class="btn btn-warning btn-sm">Editar</button>
                             <button type="button" v-on:click="eliminarPregunta(pregunta)" class="btn btn-danger btn-sm">Eliminar</button>
@@ -101,7 +105,7 @@
         </div>
         
 
-        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
         <script src="https://unpkg.com/vue-multiselect@2.1.0"></script>
         <link rel="stylesheet" href="https://unpkg.com/vue-multiselect@2.1.0/dist/vue-multiselect.min.css">
