Anadir tiempo en mongosse

--- a/views/addquestion.ejs
+++ b/views/addquestion.ejs
@@ -86,6 +86,7 @@
                         <th>Pregunta</th>
                         <th>Respuesta</th>
                         <th>Nivel</th>
+                        <th>Tiempo</th>
                         <th>Acción</th>
                     </tr>
                 </thead>
