--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
                         localStorage.nivel_seguro = response.data.nivel_maximo;
                         localStorage.nivel_actual = response.data.nivel_actual;
                         localStorage.tiempo = response.data.tiempo;
-                        localStorage.user = response.data.user;
+                        localStorage.usuario = response.data.usuario;
                         localStorage._id = response.data._id;
 
                         window.location.href = 'play';
