--- a/public/styles/play.css
+++ b/public/styles/play.css
@@ -22,7 +22,38 @@ body {
     width: 100%;
     max-width: 300px;
     max-height: 40vh;
+    cursor: zoom-in;
 }
+
+#preview-img{
+    transition:all 0.3s;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#preview-img {
+    cursor: zoom-out;
+}
+
+/*.question-img.open {
+    cursor: zoom-out;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2000;
+    padding: 2rem;
+    background: rgba(0,0,0,0.5);
+}*/
 
 button {
     outline: none;
